--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,58 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "result details";
+  align-items: end;
+  gap: 30px;
+  width: 1140px;
+}
+
+.content__details {
+  grid-area: details;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
+.result {
+  grid-area: result;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.result__video-container {
+  width: 100%;
+}
+
+.result__video {
+  width: 100%;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content__list-container {
+  height: 298px;
+  overflow-y: auto;
 }
 
 h1,
