--- a/styles/style.css
+++ b/styles/style.css
@@ -22,54 +22,6 @@ html {
   justify-content: center;
 }
 
-.content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  grid-template-areas: "result details";
-  align-items: end;
-  gap: 30px;
-  width: 1140px;
-}
-
-.content__details {
-  grid-area: details;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 26px;
-}
-
-.result {
-  grid-area: result;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.result__video-container {
-  width: 100%;
-}
-
-.result__video {
-  width: 100%;
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.search-form {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.content__list-container {
-  height: 298px;
-  overflow-y: auto;
-}
-
 h1,
 h2,
 h3,
@@ -100,4 +52,76 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 400px;
+  grid-template-rows: auto;
+  grid-template-areas: "result details";
+  align-items: end;
+  gap: 30px;
+  width: 1140px;
+}
+
+.content__details {
+  grid-area: details;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
+.result {
+  grid-area: result;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.result__video-container {
+  width: 100%;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content__list-container {
+  height: 298px;
+  overflow-y: auto;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
 }
