--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,7 @@ ol {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .content__list-container {
@@ -173,7 +174,6 @@ ol {
   text-overflow: ellipsis;
 }
 
-
 .content__video-card-description {
   display: -webkit-box;
   line-clamp: 1;
@@ -182,4 +182,95 @@ ol {
   overflow: hidden;
   line-height: 16.2px;
   font-weight: 400;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  margin-top: 5px;
+}
+
+.search-form__fieldset{
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+}
+
+.search-form__textfield {
+  border-width: 1px 0px 1px 0px;
+  width: 225px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  background-color: #1b1919;
+  color: #FFFFFF;
+  font-weight: 400;
+  line-height: 100%;
+  font-size: 18px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  margin-top: 5px;
+  appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__pseudo-checkbox {
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  margin-right: 5px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  width: 17px;
+  height: 17px;
+  background-color: #fff;
+  top: 50%;
+  left: 50%;
+  position: static;
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__checkbox:focus {
+  outline: none;
+}
+
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
 }
