--- a/styles/style.css
+++ b/styles/style.css
@@ -274,3 +274,43 @@ ol {
 .search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
+
+.button {
+  border: 1px solid #fff;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  background-color: transparent;
+  cursor: pointer;
+  text-align: center;
+  font-size: 18px;
+  padding: 6px 12px;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+  height: 34px;
+  margin-top: 20px;
+}
+
+.more-button {
+  width: 100%;
+  height: 34px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.button:active {
+  background-color: #545050;
+}
