--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,7 @@ ol {
   width: 100%;
   height: 386px;
   margin-bottom: 16px;
+  position: relative;
 }
 
 .result__video {
@@ -102,6 +103,7 @@ ol {
 .content__list-container {
   height: 298px;
   overflow-y: auto;
+  position: relative;
 }
 
 .content__list {
@@ -161,6 +163,7 @@ ol {
 .content__card-link {
   text-decoration: none;
   color: #fff;
+  display: block;
 }
 
 .content__video-card-title {
@@ -314,6 +317,27 @@ ol {
 }
 
 .button:active {
+  background-color: #545050;
+}
+
+.content__list-item {
+  padding: 0 3px;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+.content__card-link:active {
   background-color: #545050;
 }
 
