--- a/styles/style.css
+++ b/styles/style.css
@@ -9,17 +9,17 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  margin: auto;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -51,7 +51,7 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
 .content {
@@ -65,26 +65,26 @@ ol {
 }
 
 .content__details {
-  grid-area: details;
-  height: 100%;
-  width: 100%;
   display: flex;
   flex-direction: column;
+  grid-area: details;
   gap: 26px;
+  width: 100%;
+  height: 100%;
 }
 
 .result {
-  grid-area: result;
-  width: 100%;
   display: flex;
   flex-direction: column;
+  grid-area: result;
+  width: 100%;
 }
 
 .result__video-container {
+  position: relative;
   width: 100%;
   height: 386px;
   margin-bottom: 16px;
-  position: relative;
 }
 
 .result__video {
@@ -101,9 +101,9 @@ ol {
 }
 
 .content__list-container {
+  position: relative;
   height: 298px;
   overflow-y: auto;
-  position: relative;
 }
 
 .content__list {
@@ -131,15 +131,15 @@ ol {
 }
 
 .content__video-card-title {
+  margin-bottom: 6px;
+  overflow: hidden;
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
-  margin-bottom: 6px;
-  white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .search-form__fieldset-title {
@@ -161,38 +161,38 @@ ol {
 }
 
 .content__card-link {
-  text-decoration: none;
-  color: #fff;
   display: block;
+  color: #fff;
+  text-decoration: none;
 }
 
 .content__video-card-title {
+  overflow: hidden;
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
-  white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
   display: -webkit-box;
+  overflow: hidden;
+  font-weight: 400;
+  line-height: 16.2px;
   line-clamp: 1;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
-  overflow: hidden;
-  line-height: 16.2px;
-  font-weight: 400;
 }
 
 .visually-hidden {
   position: absolute;
-  inline-size: 1px;
-  block-size: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
   clip-path: inset(50%);
   white-space: nowrap;
 }
@@ -203,10 +203,10 @@ ol {
   margin-top: 5px;
 }
 
-.search-form__fieldset{
+.search-form__fieldset {
+  margin: 0;
   border: none;
   padding: 0;
-  margin: 0;
 }
 
 .search-form__label {
@@ -217,19 +217,19 @@ ol {
 }
 
 .search-form__textfield {
-  border-width: 1px 0px 1px 0px;
   width: 225px;
-  border-style: solid;
-  border-color: #FFFFFF;
-  background-color: #1b1919;
-  color: #FFFFFF;
-  font-weight: 400;
-  line-height: 100%;
-  font-size: 18px;
-  font-family: 'Fira Sans Condensed', sans-serif;
   margin-top: 5px;
-  appearance: none;
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #ffffff;
+  color: #ffffff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  background-color: #1b1919;
   cursor: pointer;
+  appearance: none;
 }
 
 .search-form__textfield:focus {
@@ -242,25 +242,25 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
-  width: 19px;
-  height: 19px;
-  border: 1px solid #fff;
-  margin-right: 5px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 19px;
+  height: 19px;
+  margin-right: 5px;
+  border: 1px solid #fff;
 }
 
 .search-form__pseudo-checkbox::after {
   content: "";
-  width: 17px;
-  height: 17px;
-  background-color: #fff;
+  position: static;
   top: 50%;
   left: 50%;
-  position: static;
+  width: 17px;
+  height: 17px;
   opacity: 0;
+  background-color: #fff;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
@@ -282,13 +282,13 @@ ol {
 
 .button {
   border: 1px solid #fff;
+  padding: 6px 12px;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  text-align: center;
   background-color: transparent;
   cursor: pointer;
-  text-align: center;
-  font-size: 18px;
-  padding: 6px 12px;
 }
 
 .search-form__submit-button {
