--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  padding-bottom: 30px;
 }
 
 .content__video-card {
@@ -162,7 +163,7 @@ ol {
 
 .content__card-link {
   display: block;
-  color: #fff;
+  color: currentColor;
   text-decoration: none;
 }
 
@@ -212,6 +213,7 @@ ol {
 .search-form__label {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: fit-content;
   cursor: pointer;
 }
@@ -221,8 +223,8 @@ ol {
   margin-top: 5px;
   border-width: 1px 0px 1px 0px;
   border-style: solid;
-  border-color: #ffffff;
-  color: #ffffff;
+  border-color: currentColor;
+  color: currentColor;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -237,7 +239,7 @@ ol {
 }
 
 .search-form__label:has(.search-form__textfield:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
 }
 
@@ -249,7 +251,7 @@ ol {
   width: 19px;
   height: 19px;
   margin-right: 5px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
 }
 
 .search-form__pseudo-checkbox::after {
@@ -260,7 +262,7 @@ ol {
   width: 17px;
   height: 17px;
   opacity: 0;
-  background-color: #fff;
+  background-color: currentColor;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
@@ -272,7 +274,7 @@ ol {
 }
 
 .search-form__label:has(.search-form__checkbox:focus-visible) {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
 }
 
@@ -281,9 +283,9 @@ ol {
 }
 
 .button {
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   padding: 6px 12px;
-  color: #fff;
+  color: currentColor;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   text-align: center;
@@ -312,7 +314,7 @@ ol {
 }
 
 .button:focus-visible {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
 }
 
@@ -333,7 +335,7 @@ ol {
 }
 
 .content__card-link:focus-visible {
-  outline: 1px solid white;
+  outline: 1px solid currentColor;
   outline-offset: 2px;
 }
 
