fix font family

--- a/styles/style.css
+++ b/styles/style.css
@@ -150,7 +150,7 @@ ol {
 }
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
